[package]
name = "rust-command-handler"
version = "0.1.0"
authors = ["gklijs <g.klijs@gmail.com>"]
edition = "2018"

[dependencies]
avro-rs = "^0.6.5"
chrono = "^0.4.6"
diesel = { version = "1.4.2", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.13.0"
env_logger = "0.6.1"
failure = "^0.1.5"
kafka = "0.7"
log = "0.4.6"
openssl = "0.10.23"
rand = "^0.5.0"
r2d2 = "0.8.4"
uuid = "0.6.5"
schema_registry_converter = "1.0.0"


